--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   table_calendar: ^3.0.9
   expandable: ^5.0.1
+  dio: ^5.3.2
+  shared_preferences: ^2.2.1
+  floor: ^1.4.2
+  flutter_bloc: ^8.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
